feat: 🎸 added support for viewing more details of the table row
This commit will add support for viewing more table row details

--- a/src/app/shared/containers/content-area/content-area.component.html
+++ b/src/app/shared/containers/content-area/content-area.component.html
@@ -44,7 +44,7 @@
                 <!-- <app-progress-spinner ></app-progress-spinner> -->
             </div>
             <app-list-view *ngIf="APIDataResult" [APIDataResult]="APIDataResult" [APIParams]="APIParams"
-                (deleteEventEmitter)="onDelete($event)">
+                (deleteEventEmitter)="onDelete($event)" (viewMoreDetailsEventEmitter)="onViewMoreDetails($event)">
             </app-list-view>
         </div>
     </div>
