--- a/src/app/shared/containers/content-area/content-area.component.html
+++ b/src/app/shared/containers/content-area/content-area.component.html
@@ -43,18 +43,83 @@
                 <p>Loading...</p>
                 <!-- <app-progress-spinner ></app-progress-spinner> -->
             </div>
-            <app-list-view *ngIf="APIDataResult" [APIDataResult]="APIDataResult" [APIParams]="APIParams"
-                (deleteEventEmitter)="onDelete($event)" (viewMoreDetailsEventEmitter)="onViewMoreDetails($event)">
+            <app-list-view *ngIf="APIDataResult" [menuOption]="menuOption" [APIDataResult]="APIDataResult"
+                [APIParams]="APIParams" (deleteEventEmitter)="onDelete($event)"
+                (viewMoreDetailsEventEmitter)="onViewMoreDetails($event)">
             </app-list-view>
         </div>
     </div>
-</div>
-<!-- <div class="maintenance-left-menu-container-div">
-    <div *ngIf="isEntryform" class="row ml-1 mt-2">
-        <div class="maintenance-left-menu-list-container" style="width: 100% !important">
-            <p>Entry Form Is Going To Be Rendered Here</p>
-            <app-entry-form [formSetting]="menuConfigItems" [formOptions]="menuOptions" style="width: 100% !important">
-            </app-entry-form>
+    <div class="maintenance-left-menu-container-div">
+        <div *ngIf="isEntryformOpenedCA" class="row ml-1 mt-2">
+            <div class="maintenance-left-menu-list-container" style="width: 100% !important">
+                <div *ngIf="APIParams === 'fields'">
+                    <app-field-data-entry></app-field-data-entry>
+                </div>
+                <div *ngIf="APIParams !== 'fields'">
+                    <p>This is any entry form</p>
+                </div>
+            </div>
         </div>
     </div>
-</div> -->
+    <div>
+        <div class="example-button-row">
+            <!-- ToDo: Pass this in FAB Button - [matMenuTriggerFor]="animals" -->
+            <button (click)="openDataEntryForm()" matRipple class="fab" mat-mini-fab color="primary">
+                <i class="material-icons">
+                    add
+                </i>
+            </button>
+            <!-- <mat-menu #animals="matMenu">
+                <button mat-menu-item [matMenuTriggerFor]="vertebrates">
+                    Vertebrates
+                </button>
+                <button mat-menu-item [matMenuTriggerFor]="invertebrates">
+                    Invertebrates
+                </button>
+            </mat-menu>
+
+            <mat-menu #vertebrates="matMenu">
+                <button mat-menu-item [matMenuTriggerFor]="fish">Fishes</button>
+                <button mat-menu-item [matMenuTriggerFor]="amphibians">
+                    Amphibians
+                </button>
+                <button mat-menu-item [matMenuTriggerFor]="reptiles">Reptiles</button>
+                <button mat-menu-item>Birds</button>
+                <button mat-menu-item>Mammals</button>
+            </mat-menu>
+
+            <mat-menu #invertebrates="matMenu">
+                <button mat-menu-item>Insects</button>
+                <button mat-menu-item>Molluscs</button>
+                <button mat-menu-item>Crustaceans</button>
+                <button mat-menu-item>Corals</button>
+                <button mat-menu-item>Arachnids</button>
+                <button mat-menu-item>Velvet worms</button>
+                <button mat-menu-item>Horseshoe crabs</button>
+            </mat-menu>
+
+            <mat-menu #fish="matMenu">
+                <button mat-menu-item>Baikal oilfish</button>
+                <button mat-menu-item>Bala shark</button>
+                <button mat-menu-item>Ballan wrasse</button>
+                <button mat-menu-item>Bamboo shark</button>
+                <button mat-menu-item>Banded killifish</button>
+            </mat-menu>
+
+            <mat-menu #amphibians="matMenu">
+                <button mat-menu-item>Sonoran desert toad</button>
+                <button mat-menu-item>Western toad</button>
+                <button mat-menu-item>Arroyo toad</button>
+                <button mat-menu-item>Yosemite toad</button>
+            </mat-menu>
+
+            <mat-menu #reptiles="matMenu">
+                <button mat-menu-item>Banded Day Gecko</button>
+                <button mat-menu-item>Banded Gila Monster</button>
+                <button mat-menu-item>Black Tree Monitor</button>
+                <button mat-menu-item>Blue Spiny Lizard</button>
+                <button mat-menu-item disabled>Velociraptor</button>
+            </mat-menu> -->
+        </div>
+    </div>
+</div>
