--- a/src/app/shared/containers/list-view/list-view.component.scss
+++ b/src/app/shared/containers/list-view/list-view.component.scss
@@ -7,6 +7,47 @@ table {
   width: 100%;
 }
 
+// Menu Option Info Title 
+.menu-option-info h4 {
+  font-size: 24px;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 300;
+  padding: 16px 0px 5px;
+  margin: 0px;
+}
+
+.menu-option-info .icon {
+  position: relative;
+  font-size: 24px;
+  display: inline-block;
+  user-select: none;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  top: -2px;
+}
+
+.menu-option-info .link {
+  border: 10px;
+  box-sizing: border-box;
+  display: inline-block;
+  font-family: Roboto, sans-serif;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+  text-decoration: none;
+  margin: 0px;
+  padding: 12px;
+  outline: none;
+  font-size: 0px;
+  font-weight: inherit;
+  position: relative;
+  vertical-align: middle;
+  z-index: 1;
+  overflow: visible;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  width: 48px;
+  height: 48px;
+  background: none;
+}
+
 
 // td,
 // th {
