--- a/src/app/pages/fields/components/field-data-entry/field-data-entry.component.scss
+++ b/src/app/pages/fields/components/field-data-entry/field-data-entry.component.scss
@@ -24,7 +24,7 @@
       border-radius: 2px;
       display: inline-block;
       min-width: 88px;
-      float: right;
+    //   float: right;
       margin-top: 1rem;
 
       .remove-all-btn {
@@ -250,8 +250,7 @@
     width: 100%;
     border-radius: 2px;
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-    background-color: rgb(51, 153, 255)
-    ;
+    background-color: rgb(51, 153, 255);
     text-align: center;
   }
 
