--- a/src/app/pages/fields/components/field-form/field-form.component.scss
+++ b/src/app/pages/fields/components/field-form/field-form.component.scss
@@ -24,8 +24,58 @@
       border-radius: 2px;
       display: inline-block;
       min-width: 88px;
-    //   float: right;
+      //  float: right;
       margin-top: 1rem;
+
+      .sel-enabled {
+        border: 10px;
+        box-sizing: border-box;
+        display: inline-block;
+        font-family: Roboto, sans-serif;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        cursor: pointer;
+        text-decoration: none;
+        margin: 0px;
+        padding: 0px;
+        outline: none;
+        font-size: inherit;
+        font-weight: inherit;
+        position: relative;
+        z-index: 1;
+        height: 36px;
+        line-height: 36px;
+        width: 100%;
+        border-radius: 2px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        background-color: rgb(51, 153, 255);
+        text-align: center;
+      }
+
+      .sel-disabled {
+        border: 10px;
+        box-sizing: border-box;
+        display: inline-block;
+        font-family: Roboto, sans-serif;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        cursor: pointer;
+        text-decoration: none;
+        margin: 0px;
+        padding: 0px;
+        outline: none;
+        font-size: inherit;
+        font-weight: inherit;
+        position: relative;
+        z-index: 1;
+        height: 36px;
+        line-height: 36px;
+        width: 100%;
+        border-radius: 2px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        // background-color: rgb(51, 153, 255);
+        text-align: center;
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14),
+          0 0 0 0 rgba(0, 0, 0, 0.12) !important;
+      }
 
       .remove-all-btn {
         border: 10px;
@@ -67,7 +117,7 @@
             user-select: none;
             padding-left: 16px;
             padding-right: 16px;
-            color: rgba(0, 0, 0, 0.3);
+            color: rgb(255, 255, 255);
           }
         }
       }
@@ -78,8 +128,8 @@
     flex: 0 0 120px;
     align-self: center;
     text-align: center;
+
     .assign-one {
-      color: rgba(0, 0, 0, 0.87);
       background-color: rgb(255, 255, 255);
       transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
       box-sizing: border-box;
@@ -90,6 +140,59 @@
       min-width: 100px;
       max-width: 100px;
       margin-top: 8px;
+
+      .is-enabled {
+        color: #ffffff !important;
+        background-color: rgb(255, 152, 0) !important;
+        font-weight: bolder !important;
+        border: 10px;
+        box-sizing: border-box;
+        display: inline-block;
+        font-family: Roboto, sans-serif;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        cursor: default;
+        text-decoration: none;
+        margin: 0px;
+        padding: 0px;
+        outline: none;
+        font-size: inherit;
+        font-weight: inherit;
+        position: relative;
+        z-index: 1;
+        height: 36px;
+        line-height: 36px;
+        width: 100%;
+        border-radius: 2px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        background-color: rgb(229, 229, 229);
+        text-align: center;
+      }
+
+      .is-disabled {
+        color: rgba(0, 0, 0, 0.3);
+        font-weight: bolder !important;
+        border: 10px;
+        box-sizing: border-box;
+        display: inline-block;
+        font-family: Roboto, sans-serif;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        cursor: default;
+        text-decoration: none;
+        margin: 0px;
+        padding: 0px;
+        outline: none;
+        font-size: inherit;
+        font-weight: inherit;
+        position: relative;
+        z-index: 1;
+        height: 36px;
+        line-height: 36px;
+        width: 100%;
+        border-radius: 2px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        background-color: rgb(229, 229, 229);
+        text-align: center;
+      }
 
       .assign-one-btn {
         border: 10px;
@@ -113,6 +216,28 @@
         transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
         background-color: rgb(229, 229, 229);
         text-align: center;
+
+        .assign-one-div {
+          height: 36px;
+          border-radius: 2px;
+          transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+          top: 0px;
+
+          .assign-one-span {
+            position: relative;
+            font-weight: bolder;
+            opacity: 1;
+            font-size: 14px;
+            letter-spacing: 0px;
+            text-transform: uppercase;
+            font-weight: 500;
+            margin: 0px;
+            user-select: none;
+            padding-left: 16px;
+            padding-right: 16px;
+            color: rgba(0, 0, 0, 0.3);
+          }
+        }
       }
     }
 
@@ -128,6 +253,59 @@
       min-width: 100px;
       max-width: 100px;
       margin-top: 8px;
+
+      .is-enabled {
+        background-color: rgb(255, 152, 0) !important;
+        color: #fff !important;
+        font-weight: bolder !important;
+        border: 10px;
+        box-sizing: border-box;
+        display: inline-block;
+        font-family: Roboto, sans-serif;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        cursor: default;
+        text-decoration: none;
+        margin: 0px;
+        padding: 0px;
+        outline: none;
+        font-size: inherit;
+        font-weight: inherit;
+        position: relative;
+        z-index: 1;
+        height: 36px;
+        line-height: 36px;
+        width: 100%;
+        border-radius: 2px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        background-color: rgb(229, 229, 229);
+        text-align: center;
+      }
+
+      .is-disabled {
+        color: rgba(0, 0, 0, 0.3);
+        font-weight: bolder !important;
+        border: 10px;
+        box-sizing: border-box;
+        display: inline-block;
+        font-family: Roboto, sans-serif;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        cursor: default;
+        text-decoration: none;
+        margin: 0px;
+        padding: 0px;
+        outline: none;
+        font-size: inherit;
+        font-weight: inherit;
+        position: relative;
+        z-index: 1;
+        height: 36px;
+        line-height: 36px;
+        width: 100%;
+        border-radius: 2px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        background-color: rgb(229, 229, 229);
+        text-align: center;
+      }
 
       .unassign-one-btn {
         border: 10px;
@@ -160,6 +338,7 @@
 
           .unassign-one-span {
             position: relative;
+            font-weight: bolder;
             opacity: 1;
             font-size: 14px;
             letter-spacing: 0px;
@@ -187,6 +366,20 @@
     border-radius: 2px;
     width: 100%;
     height: 100%;
+
+    .error {
+      padding: 5px;
+      display: flex;
+      align-items: flex-end;
+      font-family: Roboto, sans-serif;
+      color: rgba(0, 0, 0, 0.6);
+      font-size: 15px;
+
+      .error-icon {
+        font-size: 25px;
+        color: orange;
+      }
+    }
 
     .sel-options {
       width: 100%;
@@ -228,9 +421,8 @@
   display: inline-block;
   min-width: 88px;
   margin-top: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
 
-  .assign-all-button {
+  .sel-enabled {
     border: 10px;
     box-sizing: border-box;
     display: inline-block;
@@ -252,6 +444,32 @@
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
     background-color: rgb(51, 153, 255);
     text-align: center;
+  }
+
+  .sel-disabled {
+    border: 10px;
+    box-sizing: border-box;
+    display: inline-block;
+    font-family: Roboto, sans-serif;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    text-decoration: none;
+    margin: 0px;
+    padding: 0px;
+    outline: none;
+    font-size: inherit;
+    font-weight: inherit;
+    position: relative;
+    z-index: 1;
+    height: 36px;
+    line-height: 36px;
+    width: 100%;
+    border-radius: 2px;
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    // background-color: rgb(51, 153, 255);
+    text-align: center;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14),
+      0 0 0 0 rgba(0, 0, 0, 0.12) !important;
   }
 
   .assign-all-div {
